# bods

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  analyze_runs_from_input.py  benchmark.sh  btree.h  btree_insert_only  btree_insert_only.cpp  btree_mixed.cpp  estimate_k_l_from_input.py  graph.py  inverse_bods.py  monet_init.sql  postgres_init.sql  prepare.sh  requirements.txt  runloads.sh  sample.cpp  sortedness_workload_generator.cpp  util.h  work_gen_mod.cpp
scripts/: data_to_sql.sh  insert_only_workload.sh  mixed.sh
src/: args.toml  multistream_data_generator.cpp  sample_args.toml  sortedness_data_generator  sortedness_data_generator.cpp  toml.hpp
workloads/: db_init.sql
